AX WK2 Regression: WebKit outputs incorrect AX position in frames/iframes https://bugs.webkit.org/show_bug.cgi?id=61289

Update the code to determine the position of accessibility elements on Mac for WK2,
so that elements within iframes are positioned correctly.

Reviewed by Darin Adler..

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::page):
* accessibility/AccessibilityObject.h:
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper position]):



Canonical link: https://commits.webkit.org/82450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93461 268f45cc-cd09-0410-ab3c-d52691b4dbfc